--- a/networking.html
+++ b/networking.html
@@ -14,7 +14,7 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
                 <li><a href = "networking.html">Networking & Connections</a></li>
-                <li><a href = "careeroutcomes.html">Career Outcomes</a></li>
+                <li><a href = "career_exploration.html">Career Exploration</a></li>
             </ul>
         </nav>
 <body>
@@ -25,24 +25,62 @@
 
     <main>
         <section>
+            <img src="images/UMSI_LeinweberExterior_04082025_01.webp" alt="UMSI Building">
             <h2>Why Networking Matters</h2>
             <p>
-                Networking is a crucial skill in today's professional world. It helps individuals to connect with others, share knowledge, and create opportunities for collaboration and growth.
+                Networking is a powerful tool for personal and professional growth. It goes beyond simply exchanging contact information—it's about cultivating meaningful relationships that can lead to new opportunities, collaborations, and lifelong learning.
+            </p>
+<!-- Benefits Grid was an AI suggestion that I implemented to avoid repetitive layout design, I have an understanding of how to style it later, but if it's not kosher to use AI code, I will delete.-->
+    <div class="benefits-grid">
+        <article class="benefit-card">
+            <h3>Career Advancement</h3>
+            <p>Many job openings are filled through referrals and personal connections, making networking crucial for discovering hidden opportunities.</p>
+        </article>
+        <article class="benefit-card">
+            <h3>Knowledge Sharing</h3>
+            <p>Engaging with others allows you to gain insights into industry trends, best practices, and emerging technologies.</p>
+        </article>
+        <article class="benefit-card">
+            <h3>Support System</h3>
+            <p>A strong network offers encouragement, advice, and resources during career transitions, challenges, or when exploring new paths.</p>
+        </article>
+        <article class="benefit-card">
+            <h3>Collaboration</h3>
+            <p>Connections can lead to joint projects, research partnerships, and innovative solutions to complex problems.</p>
+        </article>
+        <article class="benefit-card">
+            <h3>Mentorship</h3>
+            <p>Networking helps you find mentors who can provide guidance, share experiences, and help you navigate your career journey.</p>
+        </article>
+    </div>
+    </div>
+            <p>
+                By investing in networking, you not only expand your professional circle but also enrich your personal development, making it an essential skill for long-term success in any field.
             </p>
         </section>
         <section>
+
+            <img src="images/UMSI_CareerFair.jpg" alt="UMSI Career Fair">
             <h2>Building Your Network</h2>
             <p>
                 Start by reaching out to classmates, professors, and industry professionals. Attend workshops, seminars, and networking events to expand your connections.
             </p>
         </section>
         <section>
+            <img src="images/networking.png" alt="Networking Illustration" style="width:400px; height:auto;">
             <h2>Networking Tips</h2>
             <ul>
-                <li>Be genuine: Approach networking with a mindset of building real relationships, not just transactional connections.</li>
-                <li>Follow up: After meeting someone, send a quick message to express your appreciation and keep the conversation going.</li>
-                <li>Utilize social media: Platforms like LinkedIn are great for connecting with professionals and staying updated on industry trends.</li>
+            <li><strong>Be authentic:</strong> Focus on building meaningful relationships rather than just exchanging business cards.</li>
+            <li><strong>Follow up thoughtfully:</strong> Send a personalized message after meeting someone to express appreciation and continue the conversation.</li>
+            <li><strong>Leverage online platforms:</strong> Use LinkedIn and other professional networks to connect, share insights, and stay informed about industry trends.</li>
+            <li><strong>Attend events:</strong> Participate in workshops, seminars, and conferences to meet new people and expand your network.</li>
+            <li><strong>Offer help:</strong> Be willing to assist others; networking is a two-way street and generosity builds trust.</li>
             </ul>
         </section>
 
     </main>
+    <footer>
+        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
+    </footer>
+</body>
+</html>
