--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
                 <li><a href = "networking.html">Networking & Connections</a></li>
-                <li><a href = "careeroutcomes.html">Career Outcomes</a></li>
+                <li><a href = "career_exploration.html">Career Exploration</a></li>
             </ul>
         </nav>
         <h1>Resume Support</h1>
@@ -104,13 +104,19 @@
           <!-- Content taken & modified from UMGPT with the prompt, "for the same content write me some intro content and resources for a resume page" - this was after I had asked for content for the home page.
         UMGPT. (2025). UMGPT (GPT-4.1 August 25th version) [Large language model]. -->
 
-<div>[Enter more of your own content here - that includes changing the  content of this page from Academic support to something else!]</div>
+<div>
+  <section>
+    <h2>Need More Help?</h2>
+    <p>
+      If you have questions or need personalized assistance, don’t hesitate to reach out to the UMSI Career Development Office. We’re here to support you on your career journey!
+    </p>
+    <p>
+      <a href="https://umsi.instructure.com/courses/12345/pages/contact-the-cdo" target="_blank">Contact the CDO</a> | <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">Book an Appointment</a>
+    </p>
+  </section>
+</div>
 
-    
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+      
     </main>
     <footer>
         <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
