--- a/career_exploration.html
+++ b/career_exploration.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section>
-            <img src="images/UMSI_signature-marketing-no-U-blue.png" alt="UMSI Logo">
+            <img src="images/UMSI_signature-marketing-no-U-blue.png" alt="UMSI Logo long format">
             <h2>Career Outcomes Overview</h2>
             <p>
                 The University of Michigan School of Information (UMSI) prepares students for a wide range of career paths in the information field. Our graduates are equipped with the skills and knowledge needed to succeed in various roles, including data analysis, user experience design, information architecture, and more.
