--- a/networking.html
+++ b/networking.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Networking and Building Connections</title>
 </head>
-
+<body>
     <header>
   <a href = "">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
@@ -17,7 +17,7 @@
                 <li><a href = "career_exploration.html">Career Exploration</a></li>
             </ul>
         </nav>
-<body>
+
         <h1>Networking and Building Connections</h1>
 
     </header>
@@ -53,7 +53,7 @@
             <p>Networking helps you find mentors who can provide guidance, share experiences, and help you navigate your career journey.</p>
         </article>
     </div>
-    </div>
+    <!-- End Benefits Grid -->
             <p>
                 By investing in networking, you not only expand your professional circle but also enrich your personal development, making it an essential skill for long-term success in any field.
             </p>
