--- a/networking.html
+++ b/networking.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/png" href="images/block_m.png" alt="UM Logo">
+    <title>MSI Career Development Resource Hub</title>
     <title>Networking and Building Connections</title>
 </head>
 <body>
     <header>
-  <a href = "">Skip to Main Content</a>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
-            <ul>
+          <div class="skip"><a href="#main" tabindex="0">Skip to Main Content</a></div>
+<!-- Clickable logo -->
+          <ul>
+                <li><a href="index.html" class="brand"><img src="images/white_logo_yellow_m.svg" alt="UMSI logo"></a></li>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "networking.html">Networking & Connections</a></li>
+                <li><a href = "networking.html">Networking</a></li>
                 <li><a href = "career_exploration.html">Career Exploration</a></li>
             </ul>
         </nav>
@@ -65,6 +70,8 @@
             <p>
                 Start by reaching out to classmates, professors, and industry professionals. Attend workshops, seminars, and networking events to expand your connections.
             </p>
+            <a href="https://docs.google.com/presentation/d/1R6azi49e7vd3ubRtdm33qG6Aq3bLBDBue7blM6pv49I/edit?usp=sharing" target="_blank">View Networking Opportunities Presentation</a>
+            <p>
         </section>
         <section>
             <img src="images/networking.png" alt="Networking Illustration" style="width:400px; height:auto;">
@@ -75,6 +82,29 @@
             <li><strong>Leverage online platforms:</strong> Use LinkedIn and other professional networks to connect, share insights, and stay informed about industry trends.</li>
             <li><strong>Attend events:</strong> Participate in workshops, seminars, and conferences to meet new people and expand your network.</li>
             <li><strong>Offer help:</strong> Be willing to assist others; networking is a two-way street and generosity builds trust.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Networking Resources</h2>
+            <ul>
+                <li>
+                    <a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?usp=sharing" target="_blank">
+                        Networking Tips
+                    </a> <br>
+                    Practical advice on how to effectively network both in-person and online.
+                </li>
+                <li>
+                    <a href="https://www.si.umich.edu/about-umsi/events" target="_blank">
+                        UMSI Events Calendar
+                    </a> <br>
+                    Stay updated on upcoming networking events, workshops, and seminars hosted by UMSI.
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/school/university-of-michigan---school-of-information/" target="_blank">
+                        UMSI LinkedIn Page
+                    </a> <br>
+                    Join the UMSI community on LinkedIn to connect with peers, alumni, and industry professionals.
+                </li>
             </ul>
         </section>
 
