--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/png" href="images/block_m.png" alt="UM Logo">
     <title>MSI Career Development Resource Hub</title>
 </head>
 <body>
 
     <header>
-  <a href = "">Skip to Main Content</a>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
-            <ul>
+          <div class="skip"><a href="#main" tabindex="0">Skip to Main Content</a></div>
+<!-- Clickable logo -->
+          <ul>
+                <li><a href="index.html" class="brand"><img src="images/white_logo_yellow_m.svg" alt="UMSI logo"></a></li>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "networking.html">Networking & Connections</a></li>
+                <li><a href = "networking.html">Networking</a></li>
                 <li><a href = "career_exploration.html">Career Exploration</a></li>
             </ul>
         </nav>
@@ -35,12 +39,12 @@
       <h2>Why Use This Resource?</h2>
 
 
-      <ul>
-        <li><strong>Everything in One Place:</strong> Stop searching endlessly—quickly access the resources you need for resumes, interviews, networking, mentorship, and more.</li>
-        <li><strong>Student-Focused Navigation:</strong> Browse by topic or question. Key areas are highlighted so you can get moving right away.</li>
-        <li><strong>Guidance Backed by Experts:</strong> All resources are recommended and reviewed by the UMSI Career Development Office, so you can trust the advice and materials you find here.</li>
-        <li><strong>Always Accessible:</strong> Visit the site anytime, from any device. We’re committed to meeting the accessibility needs of all students.</li>
-        <li><strong>Modern Support, UMSI Excellence:</strong> We benchmark against top peer institutions and integrate UMSI’s unique support, showcasing our commitment to your success.</li>
+      <ul class="benefits-list_index">
+        <li>Everything in One Place: Stop searching endlessly—quickly access the resources you need for resumes, interviews, networking, mentorship, and more.</li>
+        <li>Student-Focused Navigation: Browse by topic or question. Key areas are highlighted so you can get moving right away.</li>
+        <li>Guidance Backed by Experts: All resources are recommended and reviewed by the UMSI Career Development Office, so you can trust the advice and materials you find here.</li>
+        <li>Always Accessible: Visit the site anytime, from any device. We’re committed to meeting the accessibility needs of all students.</li>
+        <li>Modern Support, UMSI Excellence: We benchmark against top peer institutions and integrate UMSI’s unique support, showcasing our commitment to your success.</li>
       </ul>
     </section>
         <section>
@@ -49,15 +53,13 @@
         <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
         <ul>
             <li><a href="resume.html">Resumes</a></li>
-            <li><a>Networking & Connections</a></li>
-            <li><a>Career Exploration</a></li>
-            <li><a>Talk to a Career Coach</a></li>
+            <li><a href="networking.html">Networking & Connections</a></li>
+            <li><a href="career_exploration.html">Career Exploration</a></li>
+            <li><a href="https://umich.instructure.com/courses/137916/pages/talk-to-a-career-coach">Talk to a Career Coach</a></li>
         </ul>
-
-
       </div>
-      <aside aria-label="Most Popular Resources">
-        <h3>Most Popular Resources</h3>
+      <div class="popular-resources">
+        <h2>Most Popular Resources</h2>
         <ul>
           <li><a href="https://docs.google.com/document/d/1_1GfDJyVGIgE82MZjVhuWT_aB_2Hcj1NN62FUCXoR_o/edit?tab=t.0" target="_blank">UMSI Resume Guide</a></li>
           <li><a href="https://umich.instructure.com/courses/137916/pages/attend-an-event" target="_blank">Attend a Career Event</a></li>
@@ -65,7 +67,7 @@
           <li><a href="https://docs.google.com/presentation/d/15n-XqsFEntdbkZz89K-ohf7Or1NnCt5CQNDG-6fh2a0/edit?usp=sharing" target="_blank">Interview Preparation</a></li>
           <li><a href="https://si-umich.12twenty.com/Login" target="_blank">Career Link: UMSI’s Exclusive Career Portal</a></li>
         </ul>
-      </aside>
+      </div>
     </section>
     <section>
       <h2>Connect with the UMSI Career Development Office</h2>
@@ -73,7 +75,7 @@
         The UMSI Career Development Office (CDO) offers personalized support through appointments, events, and resource guides. <a href="https://www.si.umich.edu/programs/career-development-office" target="_blank">Visit the CDO website</a> or <a href="https://umsi.umich.edu/about/locations" target="_blank">find us on campus</a> to learn more, schedule a coaching session, or just say hello.
       </p>
     </section>
-       
+
         <!-- Content taken & modified from UMGPT with the prompt, "Write me a webpage of intro content to help meet the following requirements - this is for the home page": and then pasted in the client objectives & project requirements"
         UMGPT. (2025). UMGPT ( GPT-4.1 August 25th version) [Large language model]. -->
     </main>
