--- a/resume.html
+++ b/resume.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/png" href="images/block_m.png" alt="UM Logo">
+    <title>MSI Career Development Resource Hub</title>
     <title>Resumes</title>
 </head>
 <body>
 
     <header>
-  <a href = "">Skip to Main Content</a>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
-            <ul>
+          <div class="skip"><a href="#main" tabindex="0">Skip to Main Content</a></div>
+<!-- Clickable logo -->
+          <ul>
+                <li><a href="index.html" class="brand"><img src="images/white_logo_yellow_m.svg" alt="UMSI logo"></a></li>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "networking.html">Networking & Connections</a></li>
+                <li><a href = "networking.html">Networking</a></li>
                 <li><a href = "career_exploration.html">Career Exploration</a></li>
             </ul>
         </nav>
