--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
     <header>
         <nav>
           <div class="skip"><a href="#main" tabindex="0">Skip to Main Content</a></div>
-<!-- Clickable logo -->
+          <a href="index.html" class="brand"><img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI logo"></a>
           <ul>
-                <li><a href="index.html" class="brand"><img src="images/white_logo_yellow_m.svg" alt="UMSI logo"></a></li>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
                 <li><a href = "networking.html">Networking</a></li>
-                <li><a href = "career_exploration.html">Career Exploration</a></li>
+                <li><a href = "career_exploration.html">Careers</a></li>
             </ul>
         </nav>
-    <h1>Welcome to the UMSI Career Development Resource Hub</h1>
+    <div class="header-content">
+        <h1>Welcome to the UMSI Career Development Resource Hub</h1>
+        <p>Your one-stop shop for career success at the University of Michigan School of Information</p>
+    </div>
 
     </header>
     <main>
-    <section>
-      <img src="images/start_your_journey.png" alt="Start Your Journey with UMSI Career Development">
+    <section class="intro">
+      <div class="journey"><img src="images/start_your_journey.png" alt="Start Your Journey with UMSI Career Development"></div>
       <h2>Your Central Hub for Career Success at UMSI</h2>
       <p>
         Ready to take the next step toward your future career? The UMSI Career Development Resource Hub is your one-stop shop for trusted guidance, practical tools, and the latest information to help you thrive as a student and job-seeker. Whether you are just starting your exploration or getting ready to launch your career, you will find everything you need, organized for you.
