--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" href="images/block_m.png" alt="UM Logo">
-    <title>MSI Career Development Resource Hub</title>
     <title>Resumes</title>
 </head>
 <body>
@@ -20,10 +19,13 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
                 <li><a href = "networking.html">Networking</a></li>
-                <li><a href = "career_exploration.html">Career Exploration</a></li>
+                <li><a href = "career_exploration.html">Careers</a></li>
             </ul>
         </nav>
-        <h1>Resume Support</h1>
+        <div class="header-content">
+            <h1>Resumes</h1>
+            <p>Your guide to crafting a standout resume for UMSI students</p>
+        </div>
 
     </header>
 <main>
