--- a/career_exploration.html
+++ b/career_exploration.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" href="images/block_m.png" alt="UM Logo">
-    <title>MSI Career Development Resource Hub</title>
     <title>Career Outcomes</title>
 </head>
 <body>
@@ -19,10 +18,13 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
                 <li><a href = "networking.html">Networking</a></li>
-                <li><a href = "career_exploration.html">Career Exploration</a></li>
+                <li><a href = "career_exploration.html">Careers</a></li>
             </ul>
         </nav>
-        <h1>Career Exploration</h1>
+        <div class="header-content">
+            <h1>Career Exploration</h1>
+            <p>Your guide to exploring career paths and opportunities at UMSI</p>
+        </div>
 
     </header>
     <main>
