--- a/index.html
+++ b/index.html
@@ -28,28 +28,29 @@
 
     </header>
     <main>
-    <section class="intro">
+    <div class="intro">
       <div class="journey"><img src="images/start_your_journey.png" alt="Start Your Journey with UMSI Career Development"></div>
       <h2>Your Central Hub for Career Success at UMSI</h2>
       <p>
         Ready to take the next step toward your future career? The UMSI Career Development Resource Hub is your one-stop shop for trusted guidance, practical tools, and the latest information to help you thrive as a student and job-seeker. Whether you are just starting your exploration or getting ready to launch your career, you will find everything you need, organized for you.
       </p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </section>
+      <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+    </div>
 
-    <section>
+    <div class="benefits">
       <h2>Why Use This Resource?</h2>
-
-
-      <ul class="benefits-list_index">
-        <li>Everything in One Place: Stop searching endlessly—quickly access the resources you need for resumes, interviews, networking, mentorship, and more.</li>
-        <li>Student-Focused Navigation: Browse by topic or question. Key areas are highlighted so you can get moving right away.</li>
-        <li>Guidance Backed by Experts: All resources are recommended and reviewed by the UMSI Career Development Office, so you can trust the advice and materials you find here.</li>
-        <li>Always Accessible: Visit the site anytime, from any device. We’re committed to meeting the accessibility needs of all students.</li>
-        <li>Modern Support, UMSI Excellence: We benchmark against top peer institutions and integrate UMSI’s unique support, showcasing our commitment to your success.</li>
+      <ul class="benefits_card_grid">
+        <li id="benefit-1">Everything in One Place: Stop searching endlessly—quickly access the resources you need for resumes, interviews, networking, mentorship, and more.</li>
+        <li id="benefit-2">Student-Focused Navigation: Browse by topic or question. Key areas are highlighted so you can get moving right away.</li>
+        <li id="benefit-3">Guidance Backed by Experts: All resources are recommended and reviewed by the UMSI Career Development Office, so you can trust the advice and materials you find here.</li>
+        <li id="benefit-4">Always Accessible: Visit the site anytime, from any device. We’re committed to meeting the accessibility needs of all students.</li>
+        <li id="benefit-5">Modern Support, UMSI Excellence: We benchmark against top peer institutions and integrate UMSI’s unique support, showcasing our commitment to your success.</li>
+        <li id="benefit-6">Regularly Updated: We keep the content fresh and relevant, so you always have access to the latest tools and information.</li>
       </ul>
-    </section>
-        <section>
+    </div>
+        <section class="index_links_grid">
       <h2>Start Here</h2>
       <div>
         <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
