--- a/career_exploration.html
+++ b/career_exploration.html
@@ -12,9 +12,8 @@
     <header>
         <nav>
           <div class="skip"><a href="#main" tabindex="0">Skip to Main Content</a></div>
-<!-- Clickable logo -->
+          <a href="index.html" class="brand"><img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI logo"></a>
           <ul>
-                <li><a href="index.html" class="brand"><img src="images/white_logo_yellow_m.svg" alt="UMSI logo"></a></li>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
                 <li><a href = "networking.html">Networking</a></li>
@@ -27,52 +26,45 @@
         </div>
 
     </header>
-    <main>
-        <section>
-            <img src="images/UMSI_signature-marketing-no-U-blue.png" alt="UMSI Logo long form">
+    <main id="main">
+        <div class="block">
+            <img src="images/career_development_mosiac.jpg" alt="collage of different employer logos">
             <h2>Career Outcomes Overview</h2>
             <p>
                 The University of Michigan School of Information (UMSI) prepares students for a wide range of career paths in the information field. Our graduates are equipped with the skills and knowledge needed to succeed in various roles, including data analysis, user experience design, information architecture, and more.
             </p>
-        </section>
-        <section>
+        </div>
+
+        <div class="block">
             <h2>Job Placement Statistics</h2>
             <p>
                 UMSI boasts a strong track record of job placement for its graduates. According to recent data, over 90% of our graduates secure employment within six months of graduation, with many finding positions at top companies in the tech industry. For detailed statistics, visit our <a href="https://www.si.umich.edu/about-umsi/career-outcomes" target="_blank">Career Outcomes page</a>, or view our <a href="https://www.si.umich.edu/sites/default/files/2023-09/UMSI_Employment_Report_2023.pdf" target="_blank">Employment Report</a>.
             </p>
-        </section>
-       
-        <section>
+        </div>
+
+        <div class="block">
             <img src="images/attend_event.png" alt="Banner to Attend an Event at UMSI">
             <h2>Attend an Event!</h2>
             <p>
                 Participating in career events is a great way to network and learn about job opportunities. Check the <a href="https://www.si.umich.edu/about-umsi/events" target="_blank">UMSI events calendar</a> for upcoming workshops, guest lectures, and networking events.
             </p>
-        </section>
+        </div>
 
-        <section>
+        <div class="block">
             <h2>Career Exploration Resources</h2>
             <p>
                 Discover a variety of resources to help you explore career paths, research industries, and identify potential job opportunities. UMSI offers career guides, industry panels, and online tools to support your professional journey.
             </p>
+            <div class="resource-types">
             <ul>
-                <li>
-                    <strong>Career Guides:</strong> Access detailed guides on different fields such as data science, UX design, information policy, and more. These guides provide insights into required skills, typical job roles, and industry trends.
-                </li>
-                <li>
-                    <strong>Industry Panels:</strong> Attend panel discussions featuring professionals from diverse industries. Learn about their career journeys, challenges, and advice for students entering the workforce.
-                </li>
-                <li>
-                    <strong>Online Tools:</strong> Utilize platforms like LinkedIn, Handshake, and Glassdoor to research companies, connect with alumni, and find job postings tailored to your interests.
-                </li>
-                <li>
-                    <strong>Career Counseling:</strong> Schedule one-on-one appointments with UMSI career advisors for personalized guidance on career exploration, resume building, and interview preparation.
-                </li>
-                <li>
-                    <strong>Workshops & Webinars:</strong> Participate in skill-building workshops and webinars covering topics such as networking, personal branding, and job search strategies.
-                </li>
+                <li><h3>Career Guides:</h3> Access detailed guides on different fields such as data science, UX design, information policy, and more. These guides provide insights into required skills, typical job roles, and industry trends.</li>
+                <li><h3>Industry Panels:</h3> Attend panel discussions featuring professionals from diverse industries. Learn about their career journeys, challenges, and advice for students entering the workforce.</li>
+                <li><h3>Online Tools:</h3> Utilize platforms like LinkedIn, Handshake, and Glassdoor to research companies, connect with alumni, and find job postings tailored to your interests.</li>
+                <li><h3>Career Counseling:</h3> Schedule one-on-one appointments with UMSI career advisors for personalized guidance on career exploration, resume building, and interview preparation.</li>
+                <li><h3>Workshops & Webinars:</h3> Participate in skill-building workshops and webinars covering topics such as networking, personal branding, and job search strategies.</li>
             </ul>
-        </section>
+            </div>
+        </div>
     </main>
     <footer>
         <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
