--- a/networking.html
+++ b/networking.html
@@ -12,100 +12,100 @@
     <header>
         <nav>
           <div class="skip"><a href="#main" tabindex="0">Skip to Main Content</a></div>
-<!-- Clickable logo -->
+          <a href="index.html" class="brand"><img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI logo"></a>
           <ul>
-                <li><a href="index.html" class="brand"><img src="images/white_logo_yellow_m.svg" alt="UMSI logo"></a></li>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
                 <li><a href = "networking.html">Networking</a></li>
                 <li><a href = "career_exploration.html">Careers</a></li>
             </ul>
         </nav>
-
+        <div class="header-content">
         <h1>Networking and Building Connections</h1>
-
+        <p>Your guide to effective networking and building professional relationships</p>
+    </div>
     </header>
 
 
-    <main>
-        <section>
-            <img src="images/UMSI_LeinweberExterior_04082025_01.webp" alt="UMSI Building">
+    <main id="main">
+        <div class="block">
             <h2>Why Networking Matters</h2>
             <p>
-                Networking is a powerful tool for personal and professional growth. It goes beyond simply exchanging contact information—it's about cultivating meaningful relationships that can lead to new opportunities, collaborations, and lifelong learning.
+                Networking is a powerful tool for personal and professional growth. It goes beyond simply exchanging contact informationit's about cultivating meaningful relationships that can lead to new opportunities, collaborations, and lifelong learning.
             </p>
-<!-- Benefits Grid was an AI suggestion that I implemented to avoid repetitive layout design, I have an understanding of how to style it later, but if it's not kosher to use AI code, I will delete.-->
-    <div class="benefits-grid">
-        <article class="benefit-card">
-            <h3>Career Advancement</h3>
-            <p>Many job openings are filled through referrals and personal connections, making networking crucial for discovering hidden opportunities.</p>
-        </article>
-        <article class="benefit-card">
-            <h3>Knowledge Sharing</h3>
-            <p>Engaging with others allows you to gain insights into industry trends, best practices, and emerging technologies.</p>
-        </article>
-        <article class="benefit-card">
-            <h3>Support System</h3>
-            <p>A strong network offers encouragement, advice, and resources during career transitions, challenges, or when exploring new paths.</p>
-        </article>
-        <article class="benefit-card">
-            <h3>Collaboration</h3>
-            <p>Connections can lead to joint projects, research partnerships, and innovative solutions to complex problems.</p>
-        </article>
-        <article class="benefit-card">
-            <h3>Mentorship</h3>
-            <p>Networking helps you find mentors who can provide guidance, share experiences, and help you navigate your career journey.</p>
-        </article>
-    </div>
-    <!-- End Benefits Grid -->
+            <img src="images/UMSI_LeinweberExterior_04082025_01.webp" alt="UMSI Building">
+            <div class="benefits-grid">
+                <div class="benefit-card">
+                    <h3>Career Advancement</h3>
+                    <p>Many job openings are filled through referrals and personal connections, making networking crucial for discovering hidden opportunities.</p>
+                </div>
+                <div class="benefit-card">
+                    <h3>Knowledge Sharing</h3>
+                    <p>Engaging with others allows you to gain insights into industry trends, best practices, and emerging technologies.</p>
+                </div>
+                <div class="benefit-card">
+                    <h3>Support System</h3>
+                    <p>A strong network offers encouragement, advice, and resources during career transitions, challenges, or when exploring new paths.</p>
+                </div>
+                <div class="benefit-card">
+                    <h3>Collaboration</h3>
+                    <p>Connections can lead to joint projects, research partnerships, and innovative solutions to complex problems.</p>
+                </div>
+                <div class="benefit-card">
+                    <h3>Mentorship</h3>
+                    <p>Networking helps you find mentors who can provide guidance, share experiences, and help you navigate your career journey.</p>
+                </div>
+            </div>
+
             <p>
                 By investing in networking, you not only expand your professional circle but also enrich your personal development, making it an essential skill for long-term success in any field.
             </p>
-        </section>
-        <section>
+        </div>
 
+        <div class="block">
             <img src="images/UMSI_CareerFair.jpg" alt="UMSI Career Fair">
             <h2>Building Your Network</h2>
             <p>
                 Start by reaching out to classmates, professors, and industry professionals. Attend workshops, seminars, and networking events to expand your connections.
             </p>
             <a href="https://docs.google.com/presentation/d/1R6azi49e7vd3ubRtdm33qG6Aq3bLBDBue7blM6pv49I/edit?usp=sharing" target="_blank">View Networking Opportunities Presentation</a>
-            <p>
-        </section>
-        <section>
-            <img src="images/networking.png" alt="Networking Illustration" style="width:400px; height:auto;">
+        </div>
+
+        <div class="block">
+            <img src="images/networking.png" alt="Networking Illustration" class="illustration">
             <h2>Networking Tips</h2>
-            <ul>
-            <li><strong>Be authentic:</strong> Focus on building meaningful relationships rather than just exchanging business cards.</li>
-            <li><strong>Follow up thoughtfully:</strong> Send a personalized message after meeting someone to express appreciation and continue the conversation.</li>
-            <li><strong>Leverage online platforms:</strong> Use LinkedIn and other professional networks to connect, share insights, and stay informed about industry trends.</li>
-            <li><strong>Attend events:</strong> Participate in workshops, seminars, and conferences to meet new people and expand your network.</li>
-            <li><strong>Offer help:</strong> Be willing to assist others; networking is a two-way street and generosity builds trust.</li>
+            <ul class="networking_list">
+                <li><h3>Be authentic:</h3> Focus on building meaningful relationships rather than just exchanging business cards.</li>
+                <li><h3>Follow up thoughtfully:</h3> Send a personalized message after meeting someone to express appreciation and continue the conversation.</li>
+                <li><h3>Leverage online platforms:</h3> Use LinkedIn and other professional networks to connect, share insights, and stay informed about industry trends.</li>
+                <li><h3>Attend events:</h3> Participate in workshops, seminars, and conferences to meet new people and expand your network.</li>
+                <li><h3>Offer help:</h3> Be willing to assist others; networking is a two-way street and generosity builds trust.</li>
             </ul>
-        </section>
-        <section>
+        </div>
+
+        <div class="block">
             <h2>Networking Resources</h2>
             <ul>
                 <li>
                     <a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?usp=sharing" target="_blank">
                         Networking Tips
-                    </a> <br>
-                    Practical advice on how to effectively network both in-person and online.
+                    </a>
+                    <div>Practical advice on how to effectively network both in-person and online.</div>
                 </li>
                 <li>
                     <a href="https://www.si.umich.edu/about-umsi/events" target="_blank">
                         UMSI Events Calendar
-                    </a> <br>
-                    Stay updated on upcoming networking events, workshops, and seminars hosted by UMSI.
+                    </a>
+                    <div>Stay updated on upcoming networking events, workshops, and seminars hosted by UMSI.</div>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/school/university-of-michigan---school-of-information/" target="_blank">
                         UMSI LinkedIn Page
-                    </a> <br>
-                    Join the UMSI community on LinkedIn to connect with peers, alumni, and industry professionals.
+                    </a>
+                    <div>Join the UMSI community on LinkedIn to connect with peers, alumni, and industry professionals.</div>
                 </li>
             </ul>
-        </section>
+        </div>
 
     </main>
     <footer>
