--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     </header>
-    <main>
+  <main id="main">
     <div class="intro">
       <div class="journey"><img src="images/start_your_journey.png" alt="Start Your Journey with UMSI Career Development"></div>
       <h2>Your Central Hub for Career Success at UMSI</h2>
@@ -35,7 +35,7 @@
         Ready to take the next step toward your future career? The UMSI Career Development Resource Hub is your one-stop shop for trusted guidance, practical tools, and the latest information to help you thrive as a student and job-seeker. Whether you are just starting your exploration or getting ready to launch your career, you will find everything you need, organized for you.
       </p>
       <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
 
@@ -50,10 +50,9 @@
         <li id="benefit-6">Regularly Updated: We keep the content fresh and relevant, so you always have access to the latest tools and information.</li>
       </ul>
     </div>
-        <section class="index_links_grid">
-      <h2>Start Here</h2>
-      <div>
-        <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
+      <div class="cdo_4_resources">
+        <h2>Get Started with UMSI Career Development</h2>
+        <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the diag.">
         <ul>
             <li><a href="resume.html">Resumes</a></li>
             <li><a href="networking.html">Networking & Connections</a></li>
@@ -71,7 +70,7 @@
           <li><a href="https://si-umich.12twenty.com/Login" target="_blank">Career Link: UMSI’s Exclusive Career Portal</a></li>
         </ul>
       </div>
-    </section>
+
     <section>
       <h2>Connect with the UMSI Career Development Office</h2>
       <p>
