--- a/resume.html
+++ b/resume.html
@@ -13,9 +13,8 @@
     <header>
         <nav>
           <div class="skip"><a href="#main" tabindex="0">Skip to Main Content</a></div>
-<!-- Clickable logo -->
+          <a href="index.html" class="brand"><img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI logo"></a>
           <ul>
-                <li><a href="index.html" class="brand"><img src="images/white_logo_yellow_m.svg" alt="UMSI logo"></a></li>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "resume.html">Resumes</a></li>
                 <li><a href = "networking.html">Networking</a></li>
@@ -28,107 +27,101 @@
         </div>
 
     </header>
-<main>
-  
-  <section>
+<main id="main">
+
+  <div class="block">
     <h2>Craft a Resume that Tells Your Story</h2>
     <p>
-      Your resume is often your first impression—an opportunity to highlight your unique strengths, skills, and experiences to potential employers. Whether you’re starting from scratch or looking to polish an existing resume, these resources are here to help you every step of the way.
+      Your resume is often your first impression - an opportunity to highlight your unique strengths, skills, and experiences to potential employers. Whether youe starting from scratch or looking to polish an existing resume, these resources are here to help you every step of the way.
     </p>
     <p>
-      UMSI students are in high demand, and a clear, well-organized resume will help you stand out among applicants. On this page, you'll find practical tips, templates, and guides—all tailored to the needs of School of Information students and aligned with employer expectations.
+      UMSI students are in high demand, and a clear, well-organized resume will help you stand out among applicants. On this page, you'll find practical tips, templates, and guidese all tailored to the needs of School of Information students and aligned with employer expectations.
     </p>
     <p>
       Need feedback? You can always <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">meet with a CDO Career Coach</a> to review your materials.
     </p>
-  </section>
-  
-  <section>
+  </div>
+  <img src="images/campus_leaves.jpg" alt="Person riding a bike on an autumnal umich campus">
+  <div class="block">
     <h2>Resume Writing Made Easy: Steps to Success</h2>
     <ol>
-      <li><strong>Download a UMSI-Approved Template:</strong> Start with a format that works—no need to design from scratch.</li>
-      <li><strong>Gather Your Experiences:</strong> List jobs, internships, volunteer roles, coursework, and projects most relevant to your goals.</li>
-      <li><strong>Write Impactful Bullets:</strong> Use action verbs and highlight your skills, results, and unique contributions.</li>
-      <li><strong>Tailor for Each Opportunity:</strong> Customize your resume for every job or internship you pursue.</li>
-      <li><strong>Review and Edit:</strong> Proofread for errors, check formatting, and ask for feedback from peers or a career coach.</li>
+      <li>Download a UMSI-Approved Template: Start with a format that worksno need to design from scratch.</li>
+      <li>Gather Your Experiences: List jobs, internships, volunteer roles, coursework, and projects most relevant to your goals.</li>
+      <li>Write Impactful Bullets: Use action verbs and highlight your skills, results, and unique contributions.</li>
+      <li>Tailor for Each Opportunity: Customize your resume for every job or internship you pursue.</li>
+      <li>Review and Edit: Proofread for errors, check formatting, and ask for feedback from peers or a career coach.</li>
     </ol>
-  </section>
+  </div>
 
-  <section>
+  <div class="block">
     <h2>Resume Resources</h2>
     <ul>
       <li>
         <a href="https://umsi.instructure.com/courses/12345/pages/resume-guide" target="_blank">
           UMSI Resume Guide and Rubric
-        </a> <br>
-        Comprehensive UMSI guide including tips, formatting rules, and sample accomplishments.
+        </a>
+        <div>Comprehensive UMSI guide including tips, formatting rules, and sample accomplishments.</div>
       </li>
       <li>
         <a href="https://umsi.instructure.com/courses/12345/pages/writing-resume-bullets" target="_blank">
           Writing Effective Resume Bullets
-        </a> <br>
-        Learn how to describe your work and impact in ways employers notice.
+        </a>
+        <div>Learn how to describe your work and impact in ways employers notice.</div>
       </li>
       <li>
         <a href="https://umsi.instructure.com/courses/12345/pages/resume-rubric" target="_blank">
           Resume Rubric
-        </a> <br>
-        Evaluate your resume using the same criteria as UMSI’s Career Development Office.
+        </a>
+        <div>Evaluate your resume using the same criteria as UMSI's Career Development Office.</div>
       </li>
       <li>
         <a href="https://umsi.instructure.com/courses/12345/pages/app-materials-resources" target="_blank">
           Application Materials: Workshops and More
-        </a> <br>
-        Attend a Resume Refresh workshop, review video tutorials, or access additional templates.
+        </a>
+        <div>Attend a Resume Refresh workshop, review video tutorials, or access additional templates.</div>
       </li>
     </ul>
     <p>
       Ready for review? <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">Book a resume review appointment with a CDO Career Coach</a>.
     </p>
-  </section>
+  </div>
 
-  <section>
+  <div class="block">
     <h2>Resume FAQ</h2>
     <ul>
       <li>
-        <strong>How long should my resume be?</strong><br>
-        For most UMSI students and new grads, one page is best. More experienced professionals may require two pages.
+        <div>How long should my resume be?</div>
+        <div>For most UMSI students and new grads, one page is best. More experienced professionals may require two pages.</div>
       </li>
       <li>
-        <strong>Do I need a different resume for each application?</strong><br>
-        It’s wise to tailor your resume to the requirements and keywords of each opportunity.
+        <div>Do I need a different resume for each application?</div>
+        <div>It's wise to tailor your resume to the requirements and keywords of each opportunity.</div>
       </li>
       <li>
-        <strong>Is it okay to include coursework or student projects?</strong><br>
-        Absolutely! UMSI coursework and projects are valued by employers, especially if they show relevant skills and impact.
+        <div>Is it okay to include coursework or student projects?</div>
+        <div>Absolutely! UMSI coursework and projects are valued by employers, especially if they show relevant skills and impact.</div>
       </li>
       <li>
-        <strong>How often should I update my resume?</strong><br>
-        Update your resume every semester, after major projects, or whenever you gain a new role or responsibility.
+        <div>How often should I update my resume?</div>
+        <div>Update your resume every semester, after major projects, or whenever you gain a new role or responsibility.</div>
       </li>
     </ul>
-  </section>
-          <!-- Content taken & modified from UMGPT with the prompt, "for the same content write me some intro content and resources for a resume page" - this was after I had asked for content for the home page.
-        UMGPT. (2025). UMGPT (GPT-4.1 August 25th version) [Large language model]. -->
+  </div>
 
-<div>
-  <section>
+  <div class="block">
     <h2>Need More Help?</h2>
     <p>
-      If you have questions or need personalized assistance, don’t hesitate to reach out to the UMSI Career Development Office. We’re here to support you on your career journey!
+      If you have questions or need personalized assistance, dont hesitate to reach out to the UMSI Career Development Office. We're here to support you on your career journey!
     </p>
     <p>
       <a href="https://umsi.instructure.com/courses/12345/pages/contact-the-cdo" target="_blank">Contact the CDO</a> | <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">Book an Appointment</a>
     </p>
-  </section>
-</div>
+  </div>
 
-      
     </main>
     <footer>
         <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
-        </footer>
-    
-</body>
+    </footer>
 
+</body>
 </html>
