--- a/career_exploration.html
+++ b/career_exploration.html
@@ -38,7 +38,7 @@
         <div class="block">
             <h2>Job Placement Statistics</h2>
             <p>
-                UMSI boasts a strong track record of job placement for its graduates. According to recent data, over 90% of our graduates secure employment within six months of graduation, with many finding positions at top companies in the tech industry. For detailed statistics, visit our <a href="https://www.si.umich.edu/about-umsi/career-outcomes" target="_blank">Career Outcomes page</a>, or view our <a href="https://www.si.umich.edu/sites/default/files/2023-09/UMSI_Employment_Report_2023.pdf" target="_blank">Employment Report</a>.
+                UMSI boasts a strong track record of job placement for its graduates. According to recent data, over 90% of our graduates secure employment within six months of graduation, with many finding positions at top companies in the tech industry. For detailed statistics, visit our <a href="https://www.si.umich.edu/student-experience/career-outcomes">Career Outcomes page</a>, or view our <a href="https://www.si.umich.edu/student-experience/career-outcomes/2025-msi-employment-report">Employment Report</a>.
             </p>
         </div>
 
@@ -46,7 +46,7 @@
             <img src="images/attend_event.png" alt="Banner to Attend an Event at UMSI">
             <h2>Attend an Event!</h2>
             <p>
-                Participating in career events is a great way to network and learn about job opportunities. Check the <a href="https://www.si.umich.edu/about-umsi/events" target="_blank">UMSI events calendar</a> for upcoming workshops, guest lectures, and networking events.
+                Participating in career events is a great way to network and learn about job opportunities. Check the <a href="https://www.si.umich.edu/about-umsi/events">UMSI events calendar</a> for upcoming workshops, guest lectures, and networking events.
             </p>
         </div>
 
