--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li id="benefit-1">Everything in One Place: Stop searching endlessly—quickly access the resources you need for resumes, interviews, networking, mentorship, and more.</li>
         <li id="benefit-2">Student-Focused Navigation: Browse by topic or question. Key areas are highlighted so you can get moving right away.</li>
         <li id="benefit-3">Guidance Backed by Experts: All resources are recommended and reviewed by the UMSI Career Development Office, so you can trust the advice and materials you find here.</li>
-        <li id="benefit-4">Always Accessible: Visit the site anytime, from any device. We’re committed to meeting the accessibility needs of all students.</li>
+        <li id="benefit-4">Always Accessible: Visit the site anytime, from any device. We're committed to meeting the accessibility needs of all students.</li>
         <li id="benefit-5">Modern Support, UMSI Excellence: We benchmark against top peer institutions and integrate UMSI’s unique support, showcasing our commitment to your success.</li>
         <li id="benefit-6">Regularly Updated: We keep the content fresh and relevant, so you always have access to the latest tools and information.</li>
       </ul>
