--- a/resume.html
+++ b/resume.html
@@ -86,32 +86,32 @@
     </p>
   </div>
 
-  <div class="block">
-    <h2>Resume FAQ</h2>
-    <ul>
-      <li>
-        <div>How long should my resume be?</div>
-        <div>For most UMSI students and new grads, one page is best. More experienced professionals may require two pages.</div>
-      </li>
-      <li>
-        <div>Do I need a different resume for each application?</div>
-        <div>It's wise to tailor your resume to the requirements and keywords of each opportunity.</div>
-      </li>
-      <li>
-        <div>Is it okay to include coursework or student projects?</div>
-        <div>Absolutely! UMSI coursework and projects are valued by employers, especially if they show relevant skills and impact.</div>
-      </li>
-      <li>
-        <div>How often should I update my resume?</div>
-        <div>Update your resume every semester, after major projects, or whenever you gain a new role or responsibility.</div>
-      </li>
-    </ul>
-  </div>
+<div class="block">
+  <h2>Resume FAQ</h2>
+  <ul class="faq-list twoup">
+    <li>
+      <div class="q">How long should my resume be?</div>
+      <div class="a">For most UMSI students and new grads, one page is best. More experienced professionals may require two pages.</div>
+    </li>
+    <li>
+      <div class="q">Do I need a different resume for each application?</div>
+      <div class="a">It's wise to tailor your resume to the requirements and keywords of each opportunity.</div>
+    </li>
+    <li>
+      <div class="q">Is it okay to include coursework or student projects?</div>
+      <div class="a">Absolutely! UMSI coursework and projects are valued by employers, especially if they show relevant skills and impact.</div>
+    </li>
+    <li>
+      <div class="q">How often should I update my resume?</div>
+      <div class="a">Update your resume every semester, after major projects, or whenever you gain a new role or responsibility.</div>
+    </li>
+  </ul>
+</div>
 
   <div class="block">
     <h2>Need More Help?</h2>
     <p>
-      If you have questions or need personalized assistance, dont hesitate to reach out to the UMSI Career Development Office. We're here to support you on your career journey!
+      If you have questions or need personalized assistance, don't hesitate to reach out to the UMSI Career Development Office. We're here to support you on your career journey!
     </p>
     <p>
       <a href="https://umsi.instructure.com/courses/12345/pages/contact-the-cdo" target="_blank">Contact the CDO</a> | <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">Book an Appointment</a>
